k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microcart
  labels:
    app.kubernetes.io/name: microcart
    app.kubernetes.io/part-of: ecommerce-microservices
