k8s/05-ingress.yaml
# =========================================================================
# KUBERNETES INGRESS CONTROLLER (Routing domain traffic to Frontend & API)
# =========================================================================

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microcart-ingress
  namespace: microcart
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - microcart.me
        - www.microcart.me
      secretName: microcart-tls
  rules:
    - host: microcart.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000

    - host: www.microcart.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
